# muxaudio

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-native.yml  build-wasm.yml  build-windows.yml  release.yml  test-matrix.yml
debian/: changelog  control  copyright  libmuxaudio-dev.install  libmuxaudio0.install  muxaudio-tools.install  rules
include/: mux.h
src/: buffer.c  codec_aac.c  codec_alaw.c  codec_amr.c  codec_amr_wb.c  codec_flac.c  codec_mp3.c  codec_mulaw.c  codec_opus.c  codec_pcm.c  codec_vorbis.c  core.c  error.c  mux_internal.h  mux_leb128.c
tests/: test_aac_simple.c  test_amr.c  test_errors.c  test_flac_simple.c  test_flac_validation.c  test_g711.c  test_lossy_validation.c  test_mp3.c  test_mp3_debug.c  test_mp3_simple.c  test_opus_simple.c  test_pcm.c  test_utils.c  test_utils.h  test_vorbis_simple.c  test_vorbis_validation.c  test_waveforms.c
tools/: README.md  demux.c  mux.c  muxaudio-decode.c  muxaudio-encode.c
wasm/: .gitignore  muxaudio.wrapper.js  test.html
